--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
+    "react-icons": "^5.2.1",
     "react-spring": "^9.7.4",
     "react-tweet": "^3.2.1",
     "tailwind-merge": "^2.4.0",
